refactoring the name of all time documents and classes, adding date functionality and modifying the general layout

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <main class="app">
+        <div class="clock-Layout">
+            <div class="clock">
 
+            </div>
+        </div>
     </main>
 </body>
 
