re-structure layout for a basic weather app, modifying the date components and functions and adding extra elements for loading the data from weather API

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,11 +10,39 @@
 
 <body>
     <main class="app">
-        <div class="clock-Layout">
-            <div class="clock">
+        <div class="highlights">
+            <header class="highlights-header">
+                <section class="header--weather-state">
+                    <h2 class="header__weather-title">State</h2>
+                </section>
 
-            </div>
+                <section class="header--day-time">
+                    <div class="date-layout">
+                        <div class="date">
+
+                        </div>
+                    </div>
+
+                    <div class="clock-layout">
+                        <div class="clock">
+
+                        </div>
+                    </div>
+                </section>
+            </header>
+
+            <section class="highlights--day-status">
+
+            </section>
+
+            <section class="highlights--week-forecast">
+
+            </section>
         </div>
+
+        <section class="day-status">
+            <!-- <h3>Day Status</h3> -->
+        </section>
     </main>
 </body>
 
