setting the first data in the app, day status and location, setting up components for that data

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -32,16 +32,28 @@
             </header>
 
             <section class="highlights--day-status">
+                <div class="day-status-layout">
 
+                </div>
             </section>
 
-            <section class="highlights--week-forecast">
+            <section class="highlights--day-forecast">
+                <div class="forecast-wrapper">
 
+                </div>
             </section>
         </div>
 
         <section class="day-status">
-            <!-- <h3>Day Status</h3> -->
+            <button class="change-location">Select new position</button>
+
+            <div class="day-location-layout">
+
+            </div>
+
+            <div class="week-forecast-wrapper">
+
+            </div>
         </section>
     </main>
 </body>
