Structure css of weather status component, refactoring logic folders, refactoring geolocation code, refactoring main app logic document

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clock</title>
+    <title>Weather App</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <div class="highlights">
             <header class="highlights-header">
                 <section class="header--weather-state">
-                    <h2 class="header__weather-title">State</h2>
+                    <h2 class="header__weather-title"></h2>
                 </section>
 
                 <section class="header--day-time">
