Rendering hourly forecast data, fixing clock depending location and changing condition title

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,7 +13,7 @@
         <div class="highlights">
             <header class="highlights-header">
                 <section class="header--weather-state">
-                    <h2 class="header__weather-title"></h2>
+                    <h1 class="header__weather-title">Weather App</h1>
                 </section>
 
                 <section class="header--day-time">
@@ -39,7 +39,9 @@
 
             <section class="highlights--day-forecast">
                 <div class="forecast-wrapper">
+                    <ul class="carousel">
 
+                    </ul>
                 </div>
             </section>
         </div>
