finishing basic behaviour of carousel, scroll, click left and right, etc...

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -42,6 +42,9 @@
 
             <section class="highlights--day-forecast">
                 <div class="forecast-wrapper">
+                    <button id="left" class="arrow left">
+                        <span>A</span>
+                    </button>
                     <ul class="carousel">
                         <li class="list-hour-item initial-state">
                             <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
@@ -67,31 +70,10 @@
                             <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
                                 data-condition=""></hour-weather-component>
                         </li>
-                        <li class="list-hour-item initial-state">
-                            <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
-                                data-condition=""></hour-weather-component>
-                        </li>
-                        <li class="list-hour-item initial-state">
-                            <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
-                                data-condition=""></hour-weather-component>
-                        </li>
-                        <li class="list-hour-item initial-state">
-                            <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
-                                data-condition=""></hour-weather-component>
-                        </li>
-                        <li class="list-hour-item initial-state">
-                            <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
-                                data-condition=""></hour-weather-component>
-                        </li>
-                        <li class="list-hour-item initial-state">
-                            <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
-                                data-condition=""></hour-weather-component>
-                        </li>
-                        <li class="list-hour-item initial-state">
-                            <hour-weather-component data-hour="00:00" data-icon="#" data-temp="00"
-                                data-condition=""></hour-weather-component>
-                        </li>
                     </ul>
+                    <button id="right" class="arrow right">
+                        <span>A</span>
+                    </button>
                 </div>
             </section>
         </div>
