adding search city input featureand functionality

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -85,6 +85,7 @@
                         Enter a City Name:
                         <input id="city" class="desired-location-input" placeholder="E.g., New York, London, Tokyo"
                             type="text" />
+                        <p class="input--error hidden">Please enter a valid city name</p>
                     </label>
 
                     <button class="search-city-btn" type="button">Search</button>
