Setting loading modal, and fixing crossbrowsing dasyState format to AM PM

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -32,7 +32,6 @@
     </header>
 
     <main class="app">
-
         <div class="highlights">
             <section class="highlights--day-status">
                 <div class="day-status-layout">
@@ -133,6 +132,15 @@
                 </section>
             </div>
         </section>
+        <div class="loading-modal hidden">
+            <div class="loader">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <p>Loading...</p>
+        </div>
     </main>
 </body>
 
