Receiving city with country using Regex

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -88,8 +88,8 @@
                 <form action="" class="form-city-selector">
                     <label for="city" class="desired-location-container">
                         <p class="input-label-text">Enter a City Name:</p>
-                        <input id="city" class="desired-location-input" placeholder="E.g., New York, London, Tokyo"
-                            type="text" />
+                        <input id="city" class="desired-location-input"
+                            placeholder="E.g., New York, London or Tokyo, Japan" type="text" />
                         <p class="input--error hidden">Please enter a valid city name</p>
                     </label>
 
