adding a footer with my contact info

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -142,6 +142,14 @@
             <p>Loading...</p>
         </div>
     </main>
+
+    <footer class="app-footer">
+        <p>Created by Carlos Machado</p>
+        <ul class="social-media">
+            <li><a href="https://github.com/carlosmachadom" alt="Github link" title="Github link"><span></span></a></li>
+            <li><a href="https://www.linkedin.com/in/carlos-machado-mejia/" alt="Linkedin Link" title="Linkedin Link"><span></span></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
